Fixed Issues w/ truncated text
Fixed displaying the show more button when it wasn't necessary
Fixed accessibility issues
Made the CSS smarter about what to display
Animated the transition
Cleaned up unnecessary logic in the rendering of the components

--- a/src/DashboardUI/src/components/details-page/detail-page.scss
+++ b/src/DashboardUI/src/components/details-page/detail-page.scss
@@ -88,13 +88,42 @@
     }
   }
   .paragraph-truncate{//setting the legth to the truncated text to 3 lines.
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    overflow: hidden;
-    
+    p {
+      --line-clamp: 5;
+      --expanded-height: auto;
+      --truncated-height: auto;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: var(--line-clamp);
+      overflow: hidden;
+      height: var(--truncated-height);
+      transition: height 0.3s ease;
+    }
+    &.truncated{
+      p {
+        margin-bottom: 0;
+      }
+      button::after {
+        content: 'Show More';
+      }
+      &.open{
+        p {
+          -webkit-line-clamp: unset;
+          height: var(--expanded-height);
+        }
+        button::after {
+          content: 'Show Less';
+        }
+      }
+    }
+    &:not(.truncated){
+      p {
+        height: auto;
+      }
+      button {
+        display: none;
+      }
+    }
   }
-  
-  
 }
 
